Update and rename Wordify.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 	<!--
-	Introduction to Computer Graphics | Fall 2014 | IIT Gandhinagar
-	Pankaj Gautam [11110060]
-	Parth Sane [11110063]
-	Raj Shah [11110077]
+	Game Design and Computer Graphics | Spring 2022 | University of Akron
+	Sri Gorantla
 -->
 
 <!DOCTYPE html>
