--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SD2887H0SP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SD2887H0SP');
+</script>
 	<title>Wordify</title>
 	<!--Title of the HTML page-->
 	<link rel="stylesheet" href="style.css">
